# onice-conversion

./: .gitignore  .readthedocs.yml  .travis.yml  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/api/: containers.rst  nwbconverter.rst  spec.rst  utils.rst
docs/api/spec/: spec.external_file.rst  spec.path.rst
docs/examples/: wehr.rst
docs/examples/smear/: reese.md  smear.md
docs/examples/wehr/: wehr-ira.nblink  wehr-ira.rst  wehr-nick.nblink  wehr-nick.rst  wehr.md  wehr.rst
docs/guide/: contributing.rst
examples/smear/: reese.py
examples/wehr/: wehr-ira.ipynb  wehr-nick.ipynb
onice_conversion/: __init__.py  nwbconverter.py  utils.py
onice_conversion/containers/: __init__.py  container.py
onice_conversion/spec/: __init__.py  base_spec.py  external_file.py  path.py
onice_conversion/utils/: __init__.py
tests/: test_temp.py
