[tool.poetry]
name = "onice_conversion"
version = "0.1.0"
description = "onice tools to convert lab-specific data to nwb"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = ">=3.8"
sphinx = {version = "^3.5.2", optional = true}
furo = {version = "^2021.2.28-beta.28", optional = true}
wheel = "^0.36.2"
pynwb = "^1.4.0"

[tool.poetry.extras]
docs = ['sphinx', 'furo']


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
