[tool.poetry]
name = "onice_conversion"
version = "0.1.0"
description = "onice tools to convert lab-specific data to nwb"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
wheel = "^0.36.2"
pynwb = "^2.0,!=2.5.1"
nwb-conversion-tools = { git = "https://github.com/sneakers-the-rat/nwb-conversion-tools.git", branch = "onice" }
lxml = "^4.6.3"
parse = "^1.19.0"
sphinx = {version = "^4.5.0", optional = true}
furo = {version = "^2022.3.4", optional = true}
nbsphinx = {version="^0.8.3", optional = true}
ipykernel = {version="^5.5.3", optional = true}
autodocsumm = {version="^0.2.3", optional = true}
nbsphinx_link = {version="^1.3.0", optional = true}
pandas = "^1.2.4"
pyopenephys = "^1.1.3"
myst-parser = {version = "^0.17.0", optional = true}
Jinja2 = {version = "<3.1", optional = true}


[tool.poetry.extras]
docs = ['sphinx', 'furo', 'nbsphinx', 'ipykernel', 'autodocsumm', 'nbsphinx_link', "myst-parser", "Jinja2"]


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
